添加 逆康托展开。

--- a/基础/基础.md
+++ b/基础/基础.md
@@ -44,6 +44,7 @@ int main(int argc, char *argv[])
 ### 示例程序
 
 ```c
+#include <stdio.h>
 int main(int argc, char *argv[])
 {
 	const int MAX = 1e6;
@@ -79,7 +80,7 @@ int main(int argc, char *argv[])
 
 ### 康托展开公式
 
-给定一个全排列，计算其字典序。直观起见，我们举例[2, 3, 4, 1]来说明康托展开的运作步骤：
+给定一个全排列，计算其字典序。直观起见，我们举例[2, 3, 4, 1]来说明康托展开的运作步骤（在[1,2,3,4]的4位排列组合中）：
 
 命所求字典序为 `rank = 0`
 
@@ -120,4 +121,68 @@ int cantor(int a[], int n)
 	return (ans + 1);
 }
 ```
+
+## 四、逆康托展开
+
+即给出序号，求出组合数。
+
+### 展开举例
+
+在[1,2,3,4]的4位排列组合中，给出10可以算出第10位排列组合位[2，3，4，1]。
+
+给定，字符个数 4，字典序序号 10，首先字典序 - 1 得到排在该字典序前的全排列个数，然后：
+
+1. 9 ÷ 3! 结果，商 1 余 3，说明比首位小的数有1个。因此，我们应当使用 “2” 作为首位，并标记其已经使用。取余数进行下一步操作。
+2. 3 ÷ 2! 结果，商 1 余 1，说明比第2位小的数有1个。这里 “2” 虽然用过，但 “1” 没用过。因此，我们应当使用 “3” 作第二位。
+3. 1 ÷ 1! 结果，商 1 余 0，说明比第2位小的数有1个。这里 “1” 没有用过，“2” 已经用了，“3”也用了。因此，我们应当使用 “4” 作第三位。
+4. 同康托展开，最后一位无需判断，所有字符中至今未使用的填入即可。
+
+<p align="right">资料来源:<a href="https://blog.csdn.net/ajaxlt/article/details/86544074">CSDN</a></p>
+
+### 示例代码
+
+```c
+#include <stdio.h>
+#include <math.h>
+#include <stdbool.h>
+const int fact[] = {1, 1, 2, 6, 24, 120, 720, 5040, 40320, 362880, 3628800}; //	0-10的阶乘
+bool used[11];																 //	判断是否用过
+//cantor展开逆运算，rank表示第rank位的全排列数，length表示全排列位数长度
+int de_cantor(int rank, int length)
+{
+	int ans = 0, sum = 0;	 //	ans存储答案，sum暂时计数
+	int quotient, remainder; //	quotient商，remainder余数
+	for (int i = length - 1; i >= 1; i--)
+	{
+		quotient = rank / fact[i];
+		remainder = rank % fact[i];
+		for (int j = 1; j <= length; j++)
+		{
+			if (!used[j])
+			{
+				sum++;
+			}
+			if (sum == quotient + 1) //	找到该位
+			{
+				ans += j * pow(10, i);
+				sum = 0; //	清零
+				rank = remainder;
+				used[j] = true; //标记为用过
+				break;
+			}
+		}
+	}
+	for (int i = 1; i <= length; i++)
+	{
+		if (!used[i])
+		{
+			ans += i;
+			break;
+		}
+	} //	最后一位
+	return ans;
+}
+```
+
+<p align="center">COPYRIGHT © 2020 <a href="https://www.xxdiandeng.cn">DianDengJun</a>. | All Rights Reserverd.</p>
 
