--- a/基础/基础.md
+++ b/基础/基础.md
@@ -71,7 +71,7 @@ int main(int argc, char *argv[])
 
 ## 三、康托展开
 
-> **康托展开**是一个全排列到一个[自然数](https://baike.baidu.com/item/自然数)的[双射](https://baike.baidu.com/item/双射)，常用于构建[哈希表](https://baike.baidu.com/item/哈希表)时的空间压缩。 康托展开的实质是计算当前排列在所有由小到大全排列中的顺序，因此是可逆的。（[百度百科](https://baike.baidu.com/item/康托展开)）
+> **康托展开**是一个全排列到一个自然数的双射，常用于构建哈希表时的空间压缩。 康托展开的实质是计算当前排列在所有由小到大全排列中的顺序，因此是可逆的。（[百度百科](https://baike.baidu.com/item/康托展开)）
 
 ### 通俗理解
 
@@ -184,8 +184,95 @@ int de_cantor(int rank, int length)
 }
 ```
 
+## 五、同余定理
+
+> 数论中的重要概念。给定一个正整数m，如果两个整数a和b满足a-b能够被m整除，即(a-b)/m得到一个整数，那么就称整数a与b对模m同余，记作a≡b(mod m)。对模m同余是整数的一个等价关系。（[百度百科](https://baike.baidu.com/item/康托展开)）
+
+### 应用举例
+
+<p style="color:red;font-weight:900">
+    自然数16520、14903、14177除以m得到相同的余数，m最大的数值等于多少？
+</p>
+
+三个数字比较大，但是他们对于m同余，那么当中任意两个数字的差必然是m的倍数，要求m的最大的数值可以转化位求他们的三个差的最大公约数，从而降低计算的难度
+
+> 16520 - 14903 = 1617 = 3 × 7 × 7 × 11,
+>
+> 16520 - 14177 = 2343 = 3 × 11 × 71,
+>
+> 14903 - 14177 = 726 = 2 × 3 × 11 × 11,
+>
+> **三个差的最大公约数是 3 × 11 = 33，m的最大数字等于33**
+
++ 思路
+  1. 输入三个数
+  2. 求三个数的差
+  3. 先求前两个数的最大公约数t,再求t和第三个数的最大公约数（求最大公余数可借助辗转相除法）
+
+### 示例算法
+
+扩展到n个数，n个数除以m得到相同的的余数，求m的最大值：
+
+```c
+#include <stdio.h>
+#include <stdlib.h>
+#define Max 100
+int num[Max]; //原始序列
+int val[Max]; //每两个数之间的差
+//最大公约数
+int gcd(int a, int b)
+{
+	int temp;
+	while (b)
+	{
+		temp = a % b;
+		a = b;
+		b = temp;
+	}
+	return a;
+}
+//用同余定理处理求n的数的余数，num[]原始序列，n元素个数
+int my_remainder(int num[], int n)
+{
+	int i = 0, j = 0, k = 0;
+	//处理得到val[]，即每两个数之间的差值
+	for (i = 0; i < n - 1; i++)
+	{
+		for (j = i + 1; j < n; j++)
+		{
+			val[k++] = abs(num[i] - num[j]);
+		}
+	}
+	//求val[0]和val[1]求最大公约数t，然后再对t和val[i](i>=2)求最大公约数，
+	//一直到最后一个，得出val数组中的最大公约数即为所求
+	int t = gcd(val[0], val[1]);
+	for (i = 2; i < n; i++)
+	{
+		t = gcd(val[i], t);
+	}
+	return t;
+}
+
+int main()
+{
+	int n;
+	printf("Pleas input the number of the elements:");
+	scanf("%d", &n);
+	for (int i = 0; i < n; i++)
+	{
+		printf("Please input the NO.%d element:", i + 1);
+		scanf("%d", &num[i]);
+	}
+	printf("%d is the largest remainder of this %d elements.\n", my_remainder(num, n), n);
+	return 0;
+}
+```
+
+> 🔺注意：不将此处取余函数命名为 `remainder`，此函数已在`math.h`中声明。(C99)
+
 ---
 
-
-<p align="center">COPYRIGHT © 2020 <a href="https://www.xxdiandeng.cn">DianDengJun</a>. | All Rights Reserverd.</p>
+<p align="center">
+    COPYRIGHT © 2020 <a href="https://www.xxdiandeng.cn">DianDengJun</a>. | All Rights Reserverd.
+</p>
 
