--- a/基础/基础.md
+++ b/基础/基础.md
@@ -209,6 +209,8 @@ int de_cantor(int rank, int length)
   2. 求三个数的差
   3. 先求前两个数的最大公约数t,再求t和第三个数的最大公约数（求最大公余数可借助辗转相除法）
 
+<p align="right">资料来源:<a href="https://blog.csdn.net/u013599298/article/details/49949539">CSDN</a></p>
+
 ### 示例算法
 
 扩展到n个数，n个数除以m得到相同的的余数，求m的最大值：
@@ -268,7 +270,7 @@ int main()
 }
 ```
 
-> 🔺注意：不将此处取余函数命名为 `remainder`，此函数已在`math.h`中声明。(C99)
+> 🔺注意：不将此处取余函数命名为 `remainder`，此函数已在 `math.h` 中声明。(C99)
 
 ---
 
