--- a/1-基础/基础.md
+++ b/1-基础/基础.md
@@ -1,5 +1,7 @@
 # 基础算法
 
+> 完整阅读本文，使用支持 LaTex 的 Markdown 编辑器（例如 Typora）。
+
 ## 一、欧几里得算法求公约数
 
 ```c
@@ -271,6 +273,59 @@ int main()
 ```
 
 > 🔺注意：不将此处取余函数命名为 `remainder`，此函数已在 `math.h` 中声明。(C99)
+
+## 六、高次幂取模
+
+对于 $a^{b} \bmod m$ ,当b的值很大时,直接求解不可能,那怎样做呢?
+
+主要思想是**分治**,分而治之.将大的问题分成若干个相似的较小的问题!
+
+具体实现是用递归的方法!
+
+### 模运算
+
+首先要了解些模运算的法则,才可知道如何实现递归.
+
++ $(a \pm  b) \% p = (a \% p \pm b \% p) \% p$
++ $(a \times  b) \% p = (a \% p \times b \% p) \% p$
++ $(a ^  b) \% p = ((a \% p) ^ b) \% p$
+
+### 示例
+
+$$ 2^{100} \bmod 3$$
+
++ $$2^{100}=(2^{50})^{2}=((2^{25})^{2})^{2}=((((2^1)^2)^2)\cdots)^{2}$$
+
++ 最终知道$2^1\bmod3$的值，根据模运算递归得 $2^{100} \bmod 3$的值
+
++ 当然，还要根据奇偶性区分：
+
+  $2^{100}=(2^{50})^2=\cdots$
+
+  $2^{99}=(2^{49})^2\times2=\cdots$
+
+### 代码实现
+
+```c
+long mod(long a, long b, long m)
+{
+	long ret;
+	if (!b)
+		ret = 1; //	边界处理，b==0
+	else if (b == 1)
+		ret = a % m; //	边界处理，b==1
+	else
+	{
+		ret = mod(a, b / 2, m);	//	递归
+		ret = ret * ret % m;	//	先算偶数的（奇数第一部分和此一样）
+		if (b & 1)	//	当指数为奇数,多乘第二部分
+			ret = (ret * a % m)%m;
+	}
+	return ret;
+}
+```
+
+> 小技巧：奇数的二进制最后一位是1，用位运算判断奇数：number & 1，结果为1则为真。
 
 ---
 
