--- a/0-基础/基础.md
+++ b/0-基础/基础.md
@@ -326,6 +326,53 @@ long mod(long a, long b, long m)
 
 > 小技巧：奇数的二进制最后一位是1，用位运算判断奇数：number & 1，结果为1则为真。
 
+## 七、海伦公式
+
+### 公式表述
+
+假设在平面内，有一个三角形，边长分别为a、b、c，三角形的面积S可由以下公式求得：
+
+$$ s=\sqrt{p(p-a)(p-b)(p-c)} ,(p为半周长)$$
+
+### 代码示例
+
+算面积只要套公式就行，并无难度，但要注意三边长是否可以组成三角形，给出友好的提示。
+
+```c
+#include <stdio.h>
+#include <math.h>
+double area_tri(double a, double b, double c)
+{
+	double area = 0;
+	double p = (a + b + c) / 2.0;
+	if (a + b <= c || a + c <= b || b + c <= a)
+		area = 0;
+	else
+		area = sqrt(p * (p - a) * (p - b) * (p - c));
+	return area;
+}
+int main(int argc, char *argv[])
+{
+	double a, b, c;
+	printf("Please input the length of 3 sides:\n");
+	printf("a = ");
+	scanf("%lf", &a);
+	printf("b = ");
+	scanf("%lf", &b);
+	printf("c = ");
+	scanf("%lf", &c);
+	if (area_tri(a, b, c))
+		printf("Its perimeter is %.2f.\n", area_tri(a, b, c));
+	else
+		printf("These sides do not correspond to a valid triangle!\n");
+	return 0;
+}
+```
+
+## 八、三点顺序
+
+
+
 ---
 
 <p align="center">
