--- a/0-基础/基础.md
+++ b/0-基础/基础.md
@@ -371,7 +371,70 @@ int main(int argc, char *argv[])
 
 ## 八、三点顺序
 
+### 描述
 
+现在给你三个点A,B,C的坐标，它们可能能组成一个三角形，现在让你判断A，B，C是顺时针给出的还是逆时针给出的，或是三点共线？
+
+如：
+
+<img src="https://cdn.jsdelivr.net/gh/diandengjun/cdn@0.1.1.9/post/2020/07/13/tri.png" style="zoom: 80%;" />
+
+### 思路
+
+利用矢量叉积判断是逆时针还是顺时针。
+
+设A(x1,y1),B(x2,y2),C(x3,y3),则三角形两边的矢量分别是：
+
+AB=(x2-x1,y2-y1), AC=(x3-x1,y3-y1)
+
+则AB和AC的叉积为：
+
+$$\begin{vmatrix}x_2-x_1 & y_2-y_1\\x_3-x_1 & y_3-y_1\end{vmatrix}=(x_2-x_1)\cdot(y_3-y_1)-(y_2-y_1)\cdot(x_3-x_1)$$
+
+根据数学知识，利用右手法则进行判断
+
+1. 如果 AB × AC > 0，说明方向从 AB→AC 得到向量积，即这里的三角形ABC逆时针
+2. 如果 AB × AC < 0，说明方向从 AC→AB 得到向量积，即这里的三角形ABC顺时针
+3. 如果 AB × AC = 0，说明三点共线
+
+### 代码实现
+
+```c
+#include <stdio.h>
+typedef struct _point
+{
+	double x;
+	double y;
+} Point;
+int main(int argc, char *argv[])
+{
+	Point A, B, C;
+	printf("Please input 3 points:\n");
+	printf("\tx of Point A:");
+	scanf("%lf", &A.x);
+	printf("\ty of Point A:");
+	scanf("%lf", &A.y);
+	printf("\tA(%.2f,%.2f)\n",A.x,A.y);
+	printf("\n\tx of Point B:");
+	scanf("%lf", &B.x);
+	printf("\ty of Point B:");
+	scanf("%lf", &B.y);
+	printf("\tB(%.2f,%.2f)\n",B.x,B.y);
+	printf("\n\tx of Point C:");
+	scanf("%lf", &C.x);
+	printf("\ty of Point C:");
+	scanf("%lf", &C.y);
+	printf("\tC(%.2f,%.2f)\n",C.x,C.y);
+	double ans = (B.x - A.x) * (C.y - A.y) - (B.y - A.y) * (C.x - A.x);
+	if (!ans)
+		printf("Three points are collinear!\n");
+	else if (ans > 0)
+		printf("Anti-Clockwise!\n");
+	else
+		printf("clockwise!\n");
+	return 0;
+}
+```
 
 ---
 
