--- a/0-基础/基础.md
+++ b/0-基础/基础.md
@@ -436,6 +436,10 @@ int main(int argc, char *argv[])
 }
 ```
 
+## 总结
+
+这些看似简单的小程序其实很大一部分和数论有关，都是数论与编程的结合，可见，数学的基本功对计算机专业的重要性。
+
 ---
 
 <p align="center">
