add 数组异或操作.md, 移动矩阵的元素.md.

--- a/1-数组/03-一维数组-一维数组的动态和.md
+++ b/1-数组/03-一维数组-一维数组的动态和.md
@@ -69,6 +69,11 @@ int* runningSum(int* nums, int numsSize, int* returnSize){
 }
 ```
 
+返回信息：
+
++ 用时 8 ms，击败 90.07% 的 C 提交；
++ 内存消耗 6.4 MB，击败 100% 的 C 提交；
+
 ## 官方解答(java)
 
 + 方法一：**暴力解法**时间复杂度O(n^2)
@@ -106,6 +111,8 @@ int* runningSum(int* nums, int numsSize, int* returnSize){
        }
    }
   ```
+
+方法二的思路还蛮好，我喜欢！
 
 ---
 
