--- a/0-基础/基础.md
+++ b/0-基础/基础.md
@@ -1,6 +1,8 @@
 # 基础算法
 
 > 完整阅读本文，使用支持 LaTex 的 Markdown 编辑器（例如 Typora）。
+>
+> 或者，在 [https://www.xxdiandeng.cn](https://www.xxdiandeng.cn/2020/07/14/2020暑假自学01/) 中查看。
 
 ## 一、欧几里得算法求公约数
 
