add  将每个元素替换为.md.

--- a/1-数组/06-一维数组-有多少小于当前数字的数字.md
+++ b/1-数组/06-一维数组-有多少小于当前数字的数字.md
@@ -161,3 +161,8 @@ public:
 + 时间复杂度：排序需要 $O(n\log n)$ 的时间复杂度，遍历数组需要 O(n) 的时间复杂度，所以总的时间复杂度为 $O(n\log n+n)=O(n\log n)$ 。
 
 + 空间复杂度：上文提及的 tmp 数组需要 O(n) 的空间，空间复杂度为 O(n) 。
+
+---
+
+<p align="center">COPYRIGHT © 2020 <a href="https://www.xxdiandeng.cn">DianDengJun</a>. | All Rights Reserverd.</p>
+
