--- a/1-数组/14-一维数组-非递减数列.md
+++ b/1-数组/14-一维数组-非递减数列.md
@@ -94,8 +94,8 @@ bool checkPossibility(int* nums, int numsSize){
 所以我们考虑的区间大小最多是 4 个元素，在最多改变 1 个元素的情况下变成一个非递减数列。
 **复杂度分析**
 
-时间复杂度：NN 为给定数组的长度。我们的指针 i 和 j 最多移动 O(N) 次且考虑的数组中最多有 4 个元素。因此，复杂性为 O(N)。
-空间复杂度：使用的是常量空间，空间复杂度为 O(1)。
++ 时间复杂度：NN 为给定数组的长度。我们的指针 i 和 j 最多移动 O(N) 次且考虑的数组中最多有 4 个元素。因此，复杂性为 O(N)。
++ 空间复杂度：使用的是常量空间，空间复杂度为 O(1)。
 
 ### 方法三：查找问题索引
 
