--- a/3-查找&排序/02-选择排序.md
+++ b/3-查找&排序/02-选择排序.md
@@ -4,8 +4,6 @@
 
 输入一个正整数n（1<n≤10），再输入n个整数，用选择排序法将它们从小到大排序后输出。
 
-<!-- more -->
-
 ## 算法步骤
 * 第一步：在未排序的 n 个数（a[0] ~ a[n - 1]）中找到最小数，将它与 a[0] 交换；
 * 第二步：在剩下未排序的 n - 1 个数（a[1] ~ a[n - 1]）中找到最小数，将它与 a[1] 交换；
@@ -51,12 +49,18 @@ int main()
 
 ### 运行结果
 
-> Enter n:<u>5</u>
->
-> Enter 5 integers:<u>3 5 2 8 1</u>
->
-> After sorted:1 2 3 5 8
+```
+Enter n:5
+
+Enter 5 integers:3 5 2 8 1
+
+After sorted:1 2 3 5 8
+```
 
 
 
 <p align="right">摘自高等教育出版社《C语言程序设计（第3版）》（何钦铭，颜晖主编）</p>
+
+---
+
+<p align="center">COPYRIGHT © 2020 <a href="https://www.xxdiandeng.cn">DianDengJun</a>. | All Rights Reserverd.</p>
